# epidemiologic-calculator

./: .env-example  .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc.local  Dockerfile  Dockerfile.dev  README.md  app.py  configuration_database.py  docker-compose.override.yml  docker-compose.yml  environment_config.py  epidemiologic.db  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  seed.json  setup.cfg  utils.py
api/: routes.py
api/resources/: covid_epidemiology.py  department.py  district.py  province.py  user.py
entities/: department.py  district.py  province.py  user.py
epical/: __init__.py  __main__.py  epidemiologic.db
epical/api/: routes.py
epical/api/resources/: covid_epidemiology.py  department.py  district.py  province.py  user.py
epical/conf/: __init__.py
epical/database/: __init__.py  utils.py
epical/entities/: user.py
epical/models/: base.py  covid_seir_d.py  covid_sir_d.py
epical/repositories/: __init__.py  department.py  district.py  province.py  user.py
epical/repositories/mapping/: __init__.py  department_mapping.py  district_mapping.py  province_mapping.py  user_mapping.py
epical/services/: __init__.py  mail.py
epical/web/: __init__.py
epical/web/templates/: base.html  dashboard.html
epical/web/templates/messages/: confirm_email.html  confirm_email.txt  password_reset_email.txt
epidemicalk/: __init__.py  __main__.py  app.py  wsgi.py
epidemicalk/api/: routes.py
epidemicalk/api/resources/: covid_epidemiology.py  department.py  district.py  province.py  user.py
epidemicalk/conf/: __init__.py
epidemicalk/database/: __init__.py  utils.py
epidemicalk/entities/: __init__.py  department.py  district.py  province.py  user.py
epidemicalk/management/: __init__.py
epidemicalk/models/: covid_seaichur_d.py
epidemicalk/repositories/: __init__.py  department.py  district.py  exceptions.py  province.py  user.py
epidemicalk/repositories/mapping/: __init__.py  department.py  district.py  province.py  user.py
epidemicalk/services/: __init__.py  aws_s3.py  image.py  mail.py
epidemicalk/static/js/: app.js
epidemicalk/templates/messages/: password_reset_email.html
epidemicalk/web/: dashboard_view.py
models/: covid_seaichur_d.py  covid_seair_d.py  covid_seir_d.py  covid_sir_d.py  i_covid_19.py
repositories/: configuration.py  i_departament_repository.py  i_department_repository.py  i_district_repository.py  i_province_repository.py  i_user_repository.py
repositories/sqlalchemy/: departament_repository_sqlalchemy.py  department_repository_sqlalchemy.py  district_repository_sqlalchemy.py  province_repository_sqlalchemy.py  user_repository_sqlalchemy.py
repositories/sqlalchemy/mapping/: departament_mapping.py  department_mapping.py  district_mapping.py  province_mapping.py  user_mapping.py
services/: configuration.py  i_email_method_service.py  mail_email_method_service.py
static/: index.html  main.3adae015.css.map  main.5d3121e8.js  main.5d3121e8.js.map  main.b0a109ad.css  main.b0a109ad.css.map  main.b0a109ad.js  main.b0a109ad.js.map
static/js/: app.js  readme.txt
web/: configuration.py  dashboard_view.py  index.html
web/src/: main.ts
web/templates/: base.html  dashboard.html  index.html
web/templates/messages/: confirm_email.html  confirm_email.txt  password_reset_email.html  password_reset_email.txt
