[metadata]
description-file = README.md

[coverage:run]
branch = 1
omit =
    */management/*
    */migrations/*
    */test_*.py
source = epidemicalk

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    return NotImplemented

[tool:pytest]
addopts = -n auto --vcr-record-mode=none --ds=tests.settings
testpaths = tests epidemicalk
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
markers =
    integration

[flake8]
exclude =
    .*/,
    __pycache__/,
    */migrations/*
ignore = E231,H101,H238,H301,H306,W503
max-line-length = 88

[pep8]
exclude =
    .*/,
    __pycache__/,
    */migrations/*
ignore = H101,H238,H301,H306,W503
max-line-length = 88

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D213, D407, D202
inherit = false
match-dir = epidemicalk

[isort]
skip_glob =
    .direnv/**
    .tox/**
    .venv/**
    migrations/**
not_skip = __init__.py

# Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True

line_length = 88
known_first_party = epidemicalk
known_third_party =

[mypy]
ignore_missing_imports = True
allow_untyped_globals = True
allow_redefinition = True
show_error_codes = True

plugins = sqlmypy

[mypy.plugins.django-stubs]
django_settings_module = epidemicalk.settings

[mypy-epidemicalk.*.migrations.*]
ignore_errors = True

[mypy-tests.*]
ignore_errors = True
